extras/Tests/lang.useEmit.ci
// test the emit intrinsic of the language

int32 emitldz32 = emit(load.z32);
int64 emitldz64 = emit(load.z64);
//int64 i64Zero = emit(load.z32);	// error: invalid assignment/initialization: size of variable is different from the value's

int32 emitA = 42;
int32 emitB = 96;

int32 emitAddi32 = emit(add.i32, int32(emitA), emitB);  // FIXME: add warning to cast all values and variables in emit?
